--- a/dbz2.html
+++ b/dbz2.html
@@ -48,7 +48,7 @@
 	<section>
 	  <h2 >Season 2</h2>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1qDbt8fgfxa_PuL27Hc7nQXSgiERq5GTr/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Episode 1</h4>
 		  <p></p>
 		</div>
