--- a/dbkai3.html
+++ b/dbkai3.html
@@ -13,7 +13,7 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/dbs_logo.png" alt="Dragon Ball Super" width="30%" height="auto"></a>
+	<a><img src="images/DBZkai.png" alt="Dragon Ball Z Kai" width="35%" height="auto"></a>
   </span>
   <!-- Navigation -->
   <header>
@@ -32,17 +32,16 @@
   </section>
   <!-- Banner Section -->
   <section class="banner">
-    <h2 >Dragon Ball Super Episodes</h2>
+    <h2 >Dragon Ball Z Kai Episodes</h2>
 	  <div>
-		 <h1><a href="dbs.html"><img src="images/dbss1.png" alt="dbs season 1" width="192" height="192"></a>
-		 <a href="dbs2.html"><img src="images/dbss2.png" alt="dbs season 2" width="192" height="192"></a>
-		 <a href="dbs3.html"><img src="images/dbss3.png" alt="dbs season 3" width="192" height="192"></a>
-		 <a href="dbs4.html"><img src="images/dbss4.png" alt="dbs season 4" width="192" height="192"></a>
-		 <a href="dbs5.html"><img src="images/dbss5.png" alt="dbs season 5" width="192" height="192"></a></h1>
+		 <h1><a href="dbkai.html"><img src="images/dbkai1.jpg" alt="dbz kai season 1" width="192" height="192"></a>
+		 <a href="dbkai2.html"><img src="images/dbkai2.jpg" alt="dbz kai season 2" width="192" height="192"></a>
+		 <a href="dbkai3.html"><img src="images/dbkai3.jpg" alt="dbz kai season 3" width="192" height="192"></a>
+		 <a href="dbkai4.html"><img src="images/dbkai4.jpg" alt="dbz kai season 4" width="192" height="192"></a></h1>
 	  </div>
 	<div>
 	<section>
-	  <h2 >Season 4</h2>
+	  <h2 >Season 3</h2>
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Episode 1</h4>
@@ -166,31 +165,6 @@
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 25</h4>
-		  <p></p>
-		</div>
-		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
-		  <h4>Episode 26</h4>
-		  <p></p>
-		</div>
-		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
-		  <h4>Episode 27</h4>
-		  <p></p>
-		</div>
-		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
-		  <h4>Episode 28</h4>
-		  <p></p>
-		</div>
-		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
-		  <h4>Episode 29</h4>
-		  <p></p>
-		</div>
-		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
-		  <h4>Episode 30</h4>
 		  <p></p>
 		</div>
     </section>
