--- a/dbs.html
+++ b/dbs.html
@@ -13,7 +13,7 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/dbs_logo.png" alt="Dragon Ball" width="30%" height="auto"></a>
+	<a><img src="images/dbs_logo.png" alt="Dragon Ball Super" width="30%" height="auto"></a>
   </span>
   <!-- Navigation -->
   <header>
