--- a/dbs.html
+++ b/dbs.html
@@ -74,42 +74,42 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1BGEmcb8omNzZmU6VbBY-iHAgqsAlwdqz/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 7</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1XrHGrdjU0tc9EoV0T2nKSuh217G-TxS7/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 8</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/18ZKzFWJsMg692ssbtNwnyrZHd5XKDfer/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 9</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1ooEnIaeHFWEcPtMycNYIv_dg3_eb6Ufy/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1qmN7yNsN5UofDbRlUQu3R-DPOp90jIUz/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 11</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1pLfGApY-1rrzhf6S3qUGmoeXagUu0Vfp/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 12</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1s4zlxOtzabJQC6ZPnuP4DLzWu8--Tgyb/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 13</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1l5oK48b0mAmCs_h6cfiQa5S_Ib5nLf3l/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 14</h4>
 		  <p></p>
 		</div>
